--- a/index.html
+++ b/index.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Digital police in Lviv</title>
+    <title>Digital police in Lviv</title>
 
-  <link rel="stylesheet" type="text/css" href="css/map.css">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/map.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 
-
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?v=3.13&sensor=false&language=uk"></script>
-  <script type="text/javascript" src="js/map.js"></script>
-  <script type="text/javascript" src="js/map-worker.js"></script>
-  <script type="text/javascript" src="js/polygons.js"></script>
-  <script type="text/javascript" src="js/menu.js"></script>
-
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?v=3.13&sensor=false&language=uk"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
+    <script type="text/javascript" src="js/map.js"></script>
+    <script type="text/javascript" src="js/map-worker.js"></script>
+    <script type="text/javascript" src="js/polygons.js"></script>
+    <script type="text/javascript" src="js/menu.js"></script>
 </head>
 <body>
 
 	<div id='map'></div>
 	<div class="clear"></div>
 	<div id="menu">
-		<button id="get-markers" class="button">Get Markers</button>
-		<div id="markers-group"></div>
-	</div>
+        <ul data-bind="template: { name: 'polygon-template', foreach: polygons, as: 'polygon' }"></ul>
+    </div>
+
+
+    <script type="text/html" id="polygon-template">
+        <ul data-bind="template: { name: 'marker-template', foreach: markers, as: 'marker' }"></ul>
+        <button class="button" data-bind="click: paintPolygon, visible: markers().length >= 3">Paint Polygon</button>
+        <button class="button" data-bind="click: clearPolygon, visible: isPainted">Clear Polygon</button>
+    </script>
+
+    <script type="text/html" id="marker-template">
+        <div>
+            <i class="icon-remove"></i>
+            <span data-bind="text: marker.text"></span>
+
+        </div>
+    </script>
 </body>
 </html>
 
