--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/map.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?v=3.13&sensor=false&language=uk"></script>
@@ -19,22 +20,27 @@
 	<div id='map'></div>
 	<div class="clear"></div>
 	<div id="menu">
-        <ul data-bind="template: { name: 'polygon-template', foreach: polygons, as: 'polygon' }"></ul>
+        <ul class="list-group" data-bind="template: { name: 'polygon-template', foreach: polygons, as: 'polygon' }"></ul>
     </div>
 
 
     <script type="text/html" id="polygon-template">
-        <ul data-bind="template: { name: 'marker-template', foreach: markers, as: 'marker' }"></ul>
-        <button class="button" data-bind="click: paintPolygon, visible: markers().length >= 3">Paint Polygon</button>
-        <button class="button" data-bind="click: clearPolygon, visible: isPainted">Clear Polygon</button>
+        <li data-bind="ifnot: isPainted" class="list-group-item">
+            <ul class="list-group" data-bind="template: { name: 'marker-template', foreach: markers, as: 'marker' }"></ul>
+            <button class="button" data-bind="click: paintPolygon, visible: markers().length >= 3">Paint</button>
+            <button class="button" data-bind="click: clearPolygon, visible: isPainted">Clear</button>
+        </li>
+        <li class="list-group-item" data-bind="if: isPainted">
+            <div data-bind="text: title"></div>
+            <button class="button" data-bind="click: editPolygon">Edit</button>
+        </li>
     </script>
 
     <script type="text/html" id="marker-template">
-        <div>
-            <i class="icon-remove"></i>
+        <li class="list-group-item">
+            <i class="icon-remove" data-bind="click: polygon.removeMarker.bind(polygon, marker)"></i>
             <span data-bind="text: marker.text"></span>
-
-        </div>
+        </li>
     </script>
 </body>
 </html>
